--- a/bingo.html
+++ b/bingo.html
@@ -5,21 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1 {
+        /* Splash全体 */
+        #splash {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
+
+        /* BINGO文字 */
+        .startup span {
+            font-size: 120px;
+            font-weight: bold;
+            color: #333;
+            display: inline-block;
+            animation: bounce 1s ease-in-out infinite;
+        }
+
+        /* 1文字ずつ遅延させる */
+        .startup span:nth-child(1) { animation-delay: 0s; }
+        .startup span:nth-child(2) { animation-delay: 0.2s; }
+        .startup span:nth-child(3) { animation-delay: 0.4s; }
+        .startup span:nth-child(4) { animation-delay: 0.6s; }
+        .startup span:nth-child(5) { animation-delay: 0.8s; }
+
+        /* 上下に揺れるアニメーション */
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-40px);
+            }
+        }
+        body.loading #bingo-title,
+        body.loading #number,
+        body.loading button {
+            display: none;
+        }
+        #bingo-title {
             font-size: 50px;
             margin-top: 20%;
         }
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
+            background-image: url('/tksk2.jpeg');
+            background-size: cover; 
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 100vh;
         }
         #bingo-title {
-            color: #333;
+            color: #ffffff;
             text-align: center;
+            font-weight: bold;
         }
         #number {
-        font-size: 100px;
-        margin: 50px;
+            font-size: 200px;
+            margin: 50px;
+            color: #ffffff;
+            font-weight: bold;
         }
         button {
             font-size: 20px;
@@ -29,39 +79,81 @@
     </style>
 </head>
 <body>
+    <!-- Splash Screen -->
+    <div id="splash">
+
+        <div class="startup">
+            <span>B</span>
+            <span>I</span>
+            <span>N</span>
+            <span>G</span>
+            <span>O</span>
+        </div>
+    </div>
+
     <h1 id="bingo-title">ビンゴ抽選</h1>
     <div style="text-align: center;">
         <div id="number">---</div>
     </div>
 
     <div style="text-align: center;">
-        <button onclick="startShuffle()">スタート</button>
-        <button onclick="stopShuffle()">ストップ</button>
+        <button onclick="startBingo()">スタート</button>
     </div>
 
     <!-- BGM -->
-    <audio id="bgm" src="bgm.mp3" loop></audio>
+    <audio id="drum" src="drumroll.mp3" loop></audio>    
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
-        const numberElement = document.getElementById('number');
-        const bgm = document.getElementById('bgm');
-        let shuffleInterval;
+    //アニメーション終了
+    window.addEventListener('load', () => {
+        document.body.classList.add("loading");
 
-        function startShuffle() {
-            if (!bgm.paused) return; // すでに再生中の場合は何もしない
-            bgm.play();
-            shuffleInterval = setInterval(() => {
-                const randomNum = Math.floor(Math.random() * 75) + 1; // 1から75のランダムな数
-                numberElement.textContent = randomNum;
-            }, 100); // 100msごとに数字を更新
-        }
+        const splash = document.getElementById('splash');
 
-        function stopShuffle() {
-            clearInterval(shuffleInterval);
-            bgm.pause();
-            bgm.currentTime = 0; // BGMを最初に戻す
-        }
+        setTimeout(() => {
+            splash.remove();
+            document.body.classList.remove("loading");
+        }, 3500);
+    });
     </script>
 
+<script>
+const numberElement = document.getElementById('number');
+const drum = document.getElementById('drum');
+
+let shuffleInterval;
+let isRunning = false;
+
+function startBingo() {
+    if (isRunning) return; // 二重防止
+    isRunning = true;
+
+    // ドラム開始
+    drum.currentTime = 0;
+    drum.play();
+
+    // シャッフル開始
+    shuffleInterval = setInterval(() => {
+        const randomNum = Math.floor(Math.random() * 75) + 1;
+        numberElement.textContent = randomNum;
+    }, 80);
+
+    // 5秒後に自動停止
+    setTimeout(() => {
+        clearInterval(shuffleInterval);
+
+        const finalNum = Math.floor(Math.random() * 75) + 1;
+        numberElement.textContent = finalNum;
+
+        drum.pause();
+        drum.currentTime = 0;
+
+        isRunning = false;
+    }, 3500);
+}
+</script>
+</body>
+</html>
 </body>
 </html>
