--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
-            background-image: url('/tksk2.jpeg');
+            background-image: url('./tksk2.jpeg');
             background-size: cover; 
             background-position: center;
             background-repeat: no-repeat;
@@ -101,7 +101,7 @@
     </div>
 
     <!-- BGM -->
-    <audio id="drum" src="drumroll.mp3" loop></audio>    
+    <audio id="drum" src="./drumroll.mp3" loop></audio>    
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
