--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
-            background-image: url('./tksk2.jpeg');
+            background-image: url('./images/tksk2.jpeg');
             background-size: cover; 
             background-position: center;
             background-repeat: no-repeat;
