--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         /* BINGO文字 */
         .startup span {
-            font-size: 120px;
+            font-size: 100px;
             font-weight: bold;
             color: #333;
             display: inline-block;
@@ -56,6 +56,7 @@
             background-color: #f0f0f0;
             background-image: url('./images/tksk2.jpeg');
             background-size: cover; 
+            width: 90%;
             background-position: center;
             background-repeat: no-repeat;
             height: 100vh;
@@ -150,7 +151,7 @@ function startBingo() {
         drum.currentTime = 0;
 
         isRunning = false;
-    }, 3500);
+    }, 3600);
 }
 </script>
 </body>
