--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
                 transform: translateY(-40px);
             }
         }
+
+        html, body {
+            margin: 0;
+            padding: 0;
+        }
+
         body.loading #bingo-title,
         body.loading #number,
         body.loading button {
